Added styling for works page

--- a/styles/style-ipad.css
+++ b/styles/style-ipad.css
@@ -72,7 +72,7 @@ body {
 /* Hamburger menu */
 
 .hamburger {
-    display: inline-block;
+    display: block;
     cursor: pointer;
     float: right;
     margin: 6px 40px 0 0;
