--- a/styles/style-ipad.css
+++ b/styles/style-ipad.css
@@ -100,6 +100,20 @@ body {
     transform: rotate(45deg) translate(-8px, -8px);
 }
 
+/* Projects */
+
+.project img {
+    display: none;
+}
+
+.project {
+    font-size: 1.2em;
+    display: block;
+    width: 60%;
+    margin: 1.5%;
+}
+
+
 /* Skills */
 
 .skills-container {
@@ -236,4 +250,8 @@ body {
 .job{
     font-size: 0.9em;
     display: none;
+}
+
+.contact {
+    font-size: 1.1em;
 }
