--- a/styles/style-web.css
+++ b/styles/style-web.css
@@ -288,10 +288,15 @@ a {
     font-size: 0.9em;
 }
 
+.contact {
+    font-size: 1.1em;
+}
+
 .footer-image {
     width: 100%;
     position: fixed;
     bottom: 0;
     opacity: 0.6;
+    z-index: -1;
 }
 
