--- a/styles/style-web.css
+++ b/styles/style-web.css
@@ -16,7 +16,15 @@ h1 {
 }
 
 .name h2 {
-    font-size: 2em;
+    font-size: 2.5em;
+}
+
+.bio {
+    padding-top: 10%;
+    font-size: 1.2em;
+    font-weight: 200;
+    color: rgb(24, 73, 73);
+    font-family: "Courier New", Courier, monospace;
 }
 
 .navigation {
