--- a/styles/style-web.css
+++ b/styles/style-web.css
@@ -7,7 +7,7 @@ body {
     font-size: 12px;
 }
 
-h1 {
+h1, h2 {
     margin: 0;
 }
 
@@ -15,8 +15,13 @@ h1 {
     margin-top: 2em;
 }
 
-.name h2 {
-    font-size: 2.5em;
+.name{
+    margin: 15px 0;
+    font-size: 1.8em;
+}
+
+.title {
+    font-size: 1.2em;
 }
 
 .bio {
